--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
  unselectable="on"
  onselectstart="return false;"
  onmousedown="return false;">
-          <p>
-            This is the leaked text here.
-          </p>
+          <p>This is the leaked text here.</p>
       </div>
-      <div id=gameInfo>
-            <h1 id="gameInfoHead">Game Info Here</h1>
+      <div id='gameInfo'>
+            <h1 id="gameInfoHead">Instructions</h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
       </div>
       <div id="inputContainer">
-        <input id="textInput" type="text" name="name">
+        <textarea id="textInput" type="text" name="name"></textarea>
         <input id="leakBtn" type="button" name="leakhere" value="Leak!">
       </div>
     </div>
