Add initial timer, player scores.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <h1>Snowden Simulator</h1>
     <h2>The Truth is Out There</h2>
+    <div id= 'player1score'>0</div>
+    <div id= 'player2score'>0</div>
+    <div id="timer">0</div>
     <div id="container">
       <div id="topSecretDoc" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;"
  unselectable="on"
@@ -25,6 +28,7 @@
       <div id="inputContainer">
         <textarea id="textInput" type="text" name="name"></textarea>
         <input id="leakBtn" type="button" name="leakhere" value="Leak!">
+        <input id="resetBtn" type="button" name="resethere" value="Reset">
       </div>
     </div>
     <script src="app.js" charset="utf-8"></script>
