Added checkScore, updated Instructions and secretDocs.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
       </div>
       <div id='gameInfo'>
             <h1 id="gameInfoHead">Instructions</h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
+            <p>You are a prospective whistleblower working for the NSA, and a huge fan of Edward Snowden. He's the tops. Now that he's been exiled, his work unfinished, you have taken it upon yourself to reveal to the American people that there's much more going on under the hood. Using guile, cunning, and quick fingers, you are tasked with leaking as much accurate information to The Guardian as possible in the time allotted. First to 10 wins!</p>
       </div>
       <div id="inputContainer">
         <textarea id="textInput" type="text" name="name"></textarea>
