--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <div id= 'player1score'>0</div>
     <div id= 'player2score'>0</div>
     <div id="timer">0</div>
+    <input id="strtBtn" type="button" name="name" value="START">
     <div id="container">
       <div id="topSecretDoc" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;"
  unselectable="on"
  onselectstart="return false;"
- onmousedown="return false;"><p>This is the leaked text here.</p></div>
+ onmousedown="return false;"><p></p></div>
       <div id='gameInfo'>
             <h1 id="gameInfoHead">Instructions</h1>
             <p>You are a prospective whistleblower working for the NSA, and a huge fan of Edward Snowden. He's the tops. Now that he's been exiled, his work unfinished, you have taken it upon yourself to reveal to the American people that there's much more going on under the hood. Using guile, cunning, and quick fingers, you are tasked with leaking as much accurate information to The Guardian as possible in the time allotted. First to 10 wins!</p>
