--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Snowden Simulator</h1>
 
         <h2>The Truth is Out There</h2>
-        
+
         <input id="strtBtn" type="button" name="name" value="START">
 
         <div id="topSecretDoc" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;"
@@ -25,7 +25,7 @@
             onmousedown="return false;"><p></p></div>
         <div id='gameInfo'>
             <h1 id="gameInfoHead">Instructions</h1>
-            <p>You are a prospective whistleblower working for the NSA, and a huge fan of Edward Snowden. He's the tops. Now that he's been exiled, his work unfinished, you have taken it upon yourself to reveal to the American people that there's much more going on under the hood. Using guile, cunning, and quick fingers, you are tasked with leaking as much accurate information to The Guardian as possible in the time allotted. First to 10 wins!</p>
+            <p>You are a prospective whistleblower working for the NSA, and an acolyte of Edward Snowden. Devoted, you've taken it upon yourself to unveil the dirty secrets of domestic surveilance. Using guile, cunning, and quick fingers, you are tasked with leaking as much accurate information to The Guardian as possible in the time allotted. First to 10 wins!</p>
       </div>
       <div id="inputContainer">
         <textarea id="textInput" type="text" name="name"></textarea>
