--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <h2>The Truth is Out There</h2>
 
-        <input id="strtBtn" type="button" name="name" value="START">
+        <input id="strtBtn" class="start" type="button" name="name" value="START">
 
         <div id="topSecretDoc" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;"
             unselectable="on"
