--- a/index.html
+++ b/index.html
@@ -3,36 +3,61 @@
   <head>
     <meta charset="utf-8">
     <title>Snowden Simulator</title>
-    <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
-    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
+
+<!-- Latest compiled and minified JavaScript -->
+
+
+
   </head>
   <body>
-    <div id= 'player1score'>0</div>
+      <h1 class="col-md-12">Snowden Simulator</h1>
+    <div class="container" id="container">
 
-    <div id= 'player2score'>0</div>
+        <div class="row head">
 
-    <div id="timer">30</div>
-      <div id="container">
-        <h1>Snowden Simulator</h1>
+                <div class="col-md-4" id='player1score'>0</div>
 
-        <h2>The Truth is Out There</h2>
+                <div class="col-md-4" id='player2score'>0</div>
 
-        <input id="strtBtn" class="start" type="button" name="name" value="START">
+                <div class="col-md-4" id="timer">30</div>
 
-        <div id="topSecretDoc" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;"
-            unselectable="on"
-            onselectstart="return false;"
-            onmousedown="return false;"><p></p></div>
-        <div id='gameInfo'>
-            <h1 id="gameInfoHead">Instructions</h1>
-            <p>You are a prospective whistleblower working for the NSA, and an acolyte of Edward Snowden. Devoted, you've taken it upon yourself to unveil the dirty secrets of domestic surveilance. Using guile, cunning, and quick fingers, you are tasked with leaking as much accurate information to The Guardian as possible in the time allotted. First to 10 wins!</p>
-      </div>
-      <div id="inputContainer">
-        <textarea id="textInput" type="text" name="name"></textarea>
-        <input id="leakBtn" type="button" name="leakhere" value="Leak!">
-        <input id="resetBtn" type="button" name="resethere" value="Reset">
-      </div>
+            <div class="col-md-12 headertext">
+
+                <input id="strtBtn" class=" col-md-2 start btn-success" type="button" name="name" value="START">
+                <input id="resetBtn" class="col-md-2 btn-danger"type="button" name="resethere" value="RESET">
+            </div>
+
+        </div>
+
+        <div class="row" id="row2">
+
+            <div class="col-md-4 instructions">
+                <h3 id="gameInfoHead">Instructions</h1>
+                <p>You are a prospective whistleblower working for the NSA, and an acolyte of Edward Snowden. Devoted, you've taken it upon yourself to unveil the dirty secrets of domestic surveilance. Using guile, cunning, and quick fingers, you are tasked with leaking as much accurate information to The Guardian as possible in the time allotted. First to 10 wins!</p>
+            </div>
+
+            <div class="col-md-8 hiddenttext" id="topSecretDoc" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" unselectable="on" onselectstart="return false;" onmousedown="return false;">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+
+            <div class="col-md-12 myfooter">
+                <textarea class="col-md-12" id="textInput" type="text" name="name"></textarea>
+            </div>
+
+        </div>
     </div>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+
     <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
