--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
 
   </head>
   <body>
-      <h1 class="col-md-12">Snowden Simulator</h1>
     <div class="container" id="container">
 
         <div class="row head">
+                <h1 class="col-md-12">Snowden Simulator</h1>
 
-                <div class="col-md-4" id='player1score'>0</div>
-
-                <div class="col-md-4" id='player2score'>0</div>
-
-                <div class="col-md-4" id="timer">30</div>
 
             <div class="col-md-12 headertext">
+
+              <div class="col-md-4" id='player1score'>0</div>
+
+              <div class="col-md-4" id='player2score'>0</div>
+
+              <div class="col-md-4" id="timer">30</div>
 
                 <input id="strtBtn" class=" col-md-2 start btn-success" type="button" name="name" value="START">
                 <input id="resetBtn" class="col-md-2 btn-danger"type="button" name="resethere" value="RESET">
@@ -38,12 +39,9 @@
 
         <div class="row" id="row2">
 
-            <div class="col-md-4 instructions">
-                <h3 id="gameInfoHead">Instructions</h1>
-                <p>You are a prospective whistleblower working for the NSA, and an acolyte of Edward Snowden. Devoted, you've taken it upon yourself to unveil the dirty secrets of domestic surveilance. Using guile, cunning, and quick fingers, you are tasked with leaking as much accurate information to The Guardian as possible in the time allotted. First to 10 wins!</p>
-            </div>
 
-            <div class="col-md-8 hiddenttext" id="topSecretDoc" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" unselectable="on" onselectstart="return false;" onmousedown="return false;">
+
+            <div class="col-md-12 hiddenttext" id="topSecretDoc" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" unselectable="on" onselectstart="return false;" onmousedown="return false;">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
 
@@ -54,10 +52,27 @@
         </div>
     </div>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <div class="modal fade" id="instructions" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Modal title</h4>
+          </div>
+          <div class="modal-body">
+            <p>You are a prospective whistleblower working for the NSA, and an acolyte of Edward Snowden. Devoted, you've taken it upon yourself to unveil the dirty secrets of domestic surveilance. Using guile, cunning, and quick fingers, you are tasked with leaking as much accurate information to The Guardian as possible in the time allotted. First to 10 wins!&hellip;</p>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     <script src="app.js" charset="utf-8"></script>
+
+
+
   </body>
 </html>
