Fixing something I broke

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
               <div class="col-md-2" id="timer"> </div>
 
-                <input id="strtBtn" class=" col-md-3 start btn-success" type="button" name="name" value="START">
-                <input id="resetBtn" class="col-md-3"type="button" name="resethere" value="RESET">
+                <input id="strtBtn" class=" col-md-3 start btn-success" type="button" name="name" value="COMMENCE">
+                <input id="resetBtn" class="col-md-3"type="button" name="resethere" value="CLEAR">
             </div>
 
         </div>
@@ -46,7 +46,7 @@
 
 
             <div class="col-md-12 hiddenttext" id="topSecretDoc" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" unselectable="on" onselectstart="return false;" onmousedown="return false;">
-                <p>...</p>
+                <p>Feed me...</p>
             </div>
 
             <div class="col-md-12 myfooter">
