--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="modaltitle">Instructions</h4>
+            <h4 class="modal-title" id="modaltitle">What's this?</h4>
           </div>
           <div class="modal-body" id="instructionsmodal">
             <p>You and your imaginary friend find an abandoned console in the woods. It beckons. As your fingers embrace the keys like long-lost lovers, you notice random quotes of text appear on the screen. Is this...some sort of test? Does it desire pinpoint reproduction? Has it no mercy? Play at your peril.</p>
